# tozo

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .pdm-python  development.env  pyproject.toml  testing.env
backend/src/backend/: run.py
backend/src/backend/blueprints/: control.py  members.py  sessions.py  todos.py
backend/src/backend/lib/: email.py
backend/src/backend/migrations/: 0.py  data.py
backend/src/backend/models/: member.py  todo.py
backend/src/backend/templates/: forgotten_password.html  password_changed.html  welcome.html
backend/tests/: conftest.py  test_rate_limits.py
backend/tests/blueprints/: test_control.py  test_members.py  test_sessions.py  test_todos.py
backend/tests/lib/: test_email.py
backend/tests/models/: test_members.py  test_todo.py
frontend/: README.md  package-lock.json  package.json  package.json.txt
frontend/src/: App.test.tsx  App.tsx  AuthContext.tsx  Router.tsx  ThemeProvider.tsx  ToastContext.tsx  models.ts  queries.ts  query.ts  utils.tsx
frontend/src/components/: AccountMenu.tsx  CheckboxField.tsx  DateField.tsx  EmailField.tsx  FormActions.tsx  LazyPasswordWithStrengthField.tsx  PasswordField.tsx  PasswordWithStrengthField.tsx  RequireAuth.tsx  TextField.tsx  Title.tsx  Toasts.tsx  Todo.tsx  TodoForm.tsx  TopBar.tsx
frontend/src/pages/: ChangePassword.tsx  ConfirmEmail.tsx  CreateTodo.tsx  EditTodo.tsx  ForgottenPassword.tsx  Login.tsx  Register.tsx  ResetPassword.tsx  Todos.tsx
infrastructure/: github.tf  main.tf  secrets.auto.tfvars.vault  terraform.tfstate.vault
